--- a/requirements.txt
+++ b/requirements.txt
@@ -26,19 +26,25 @@ openpyxl==3.0.9
 packaging==21.3
 pandas==1.4.1
 pathspec==0.9.0
+patsy==0.5.2
 Pillow==9.0.1
 platformdirs==2.5.1
 plotly==5.6.0
+pyaml==21.10.1
 pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
+PyYAML==6.0
 requests==2.27.1
 scikit-learn==1.0.2
+scikit-optimize==0.9.0
 scipy==1.8.0
 seaborn==0.11.2
 six==1.16.0
+statsmodels==0.13.2
 tenacity==8.0.1
 threadpoolctl==3.1.0
 tomli==2.0.1
 urllib3==1.26.8
 Werkzeug==2.0.3
+xgboost==1.5.2
